--- a/preamble/math.tex
+++ b/preamble/math.tex
@@ -73,3 +73,5 @@
 \DeclarePairedDelimiter\set{\{}{\}}
 \DeclarePairedDelimiter\card{\lvert}{\rvert}
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
+
+\newtheorem{proof}{Proof}
