--- a/biblio.bib
+++ b/biblio.bib
@@ -57,8 +57,8 @@
   Booktitle = {IJCAI Workshop on Advances in Preference Handling},
   Year = {2005},
   Pages = {124--129},
-  Keywords = {voting, social choice, preferences}
-  doi={www.eecs.harvard.edu/cs286r/courses/fall11/papers/KL05.pdf}
+  Keywords = {voting, social choice, preferences},
+  url={www.eecs.harvard.edu/cs286r/courses/fall11/papers/KL05.pdf}
 }
 
 @Book{Kouvelis1997,
@@ -363,7 +363,7 @@
 	numpages = {10},
 	keywords = {voting theory, computational social choice},
 	location = {Valencia, Spain},
-	series = {AAMAS '12}
+	series = {AAMAS '12},
 	url={dl.acm.org/doi/10.5555/2343776.2343787}
 }
 
