--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -16,8 +16,10 @@
 	\usepackage{newunicodechar}
 %Text Companion fonts, much used together with CM-like fonts. Provides \texteuro and commands for text mode characters such as \textminus, \textrightarrow, \textlbrackdbl.
 	\usepackage{textcomp}
-%St Mary’s Road symbol font, used for ⟦ = \llbracket.
-%	\usepackage{stmaryrd}
+%St Mary’s Road symbol font, used for ⟦ = \llbracket. The \SetSymbolFont command avoids spurious warnings, but also some valid ones, see https://tex.stackexchange.com/a/106719/.
+	\usepackage{stmaryrd}\SetSymbolFont{stmry}{bold}{U}{stmry}{m}{n}
+%TODO consider removing mathrsfs when submitting. They are needed for the \mathscr command at Olivier’s box (probably due to some outdated package).
+	\usepackage{mathrsfs}
 \usepackage{centernot}
 %Solves bug in lmodern, https://tex.stackexchange.com/a/261188; probably useful only for unusually big font sizes; and probably better to use exscale instead. Note that the authors of exscale write against this trick.
 	%\DeclareFontShape{OMX}{cmex}{m}{n}{
