--- a/preamble/math.tex
+++ b/preamble/math.tex
@@ -74,4 +74,5 @@
 \DeclarePairedDelimiter\card{\lvert}{\rvert}
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 
-\newtheorem{proof}{Proof}
+\newtheorem*{proof*}{Proof}
+\newtheorem{proposition}{Proposition}
