--- a/minimax.tex
+++ b/minimax.tex
@@ -15,7 +15,7 @@
 \usepackage{import}
 \usepackage{algorithm, algpseudocode}
 \usepackage{booktabs}
-
+\usepackage{pgfplots}
 
 \newcommand{\commentOC}[1]{\textcolor{blue}{\small$\big[$OC: #1$\big]$}}
 \newcommand{\commentBN}[1]{\textcolor{red}{\small$\big[$BN: #1$\big]$}}
@@ -466,9 +466,46 @@ We start with empty knowledge ($\pprofile = (\emptyset, \emptyset, …), W = \W$
 \begin{figure}
 	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions.}
 	\label{fig:smallSize}
-%	\Description{Graph showing that Pessimistic performs slightly better than Extended pessimistic, itself performing better than Elitist, itself performing much better than Random.}
-	\includegraphics[width=.45\textwidth]{comparison.png}
+	\begin{tikzpicture}
+		\begin{axis}[
+			y=10,
+			xlabel=Number of Questions,
+			ylabel=Avg. Regret,
+			ytick={0,2,4,6,8,10,12},
+			xtick distance=10,
+			ytick distance=2,
+			xtick pos=left,
+			ymajorgrids=true,
+			ytick style={draw=none},
+			ymin=0,
+			ymax=12,
+			xmin=0,
+			xmax=100,
+			yticklabels={0,2,4,6,8,10,12}]
+			\addlegendimage{mark=*,teal,mark size=2}
+			\addlegendimage{mark=triangle*,orange,mark size=2}
+			\addlegendimage{mark=square*,blue,mark size=2}
+			\addlegendimage{mark=diamond*,red,mark size=2}
+			
+			\addplot[thick, mark=*, mark size = {2}, mark indices = {35}, teal] table [x=k, y=Pes.]{data/comparison.dat};
+			\addlegendentry{Pes.}
+			\addplot[thick, mark=triangle*, mark size = {2}, mark indices = {45}, orange] table [x=k, y=Ex.Pes.]{data/comparison.dat};
+			\addlegendentry{Ex.Pes.}
+			\addplot[thick, mark=square*, mark size = {2}, mark indices = {50}, blue] table [x=k, y=Eli.]{data/comparison.dat};
+			\addlegendentry{Eli.}
+			\addplot[thick, mark=diamond*, mark size = {2}, mark indices = {50}, red] table [x=k, y=Rnd.]{data/comparison.dat};
+			\addlegendentry{Rnd.}
+		
+		\end{axis}
+	\end{tikzpicture}
 \end{figure}
+
+%\begin{figure}
+%	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions.}
+%	\label{fig:smallSize}
+%%	\Description{Graph showing that Pessimistic performs slightly better than Extended pessimistic, itself performing better than Elitist, itself performing much better than Random.}
+%	\includegraphics[width=.45\textwidth]{comparison.png}
+%\end{figure}
 \sisetup{table-number-alignment = center, table-figures-integer=2, table-figures-decimal=1, table-auto-round}
 \begin{table}
 	\caption{Average MMR in problems of size $(10, 20)$ after $k$ questions.}
@@ -556,12 +593,62 @@ For the experiments we performed, we see that the number of questions required t
 
 %\subsection{Decrease in MMR values}
 \paragraph{Decrease in MMR values}
+
 \begin{figure}
 	\caption{Average MMR after $k$ questions with Pessimistic strategy for different problem sizes.}
 	\label{fig:linearity}
-	%\Description{Graph showing that the MMR decreases very approximately linearly, and is convex, as a function of the number of questions.}
-	\includegraphics[width=.45\textwidth]{linearity.png}
+	\begin{tikzpicture}
+		\pgfplotsset{
+			every axis legend/.append style={
+				at={(0.5,1.03)},
+				anchor=south
+			},
+		}
+		\begin{axis}[
+			y=3.5,
+			legend columns=3,
+			xlabel=Number of Questions,
+			ylabel=Avg. Regret,
+			ytick={0,5,10,15,20,25,30,35},
+			xtick distance=100,
+			ytick distance=5,
+			xtick pos=left,
+			ymajorgrids=true,
+			ytick style={draw=none},
+			ymin=0,
+			ymax=35,
+			xmin=0,
+			xmax=800,
+			yticklabels={0,5,10,15,20,25,30,35}]
+			
+			\addlegendimage{mark=triangle*,teal,mark size=2}
+			\addlegendimage{mark=*,violet,mark size=2}
+			\addlegendimage{mark=square*,green,mark size=2}
+			\addlegendimage{mark=diamond*,red,mark size=2}
+			\addlegendimage{mark=pentagon*,cyan,mark size=2}
+			\addlegendimage{mark=halfsquare*,magenta,mark size=2}
+			
+			\addplot[thick, mark=triangle*, mark size = {2}, mark indices = {35}, teal] table [x=k, y=5.10]{data/linearity.dat};
+			\addlegendentry{m=5, n=10}
+			\addplot[thick, mark=*, mark size = {2}, mark indices = {45}, violet] table [x=k, y=5.15]{data/linearity.dat};
+			\addlegendentry{m=5, n=15}
+			\addplot[thick, mark=square*, mark size = {2}, mark indices = {90}, green] table [x=k, y=5.20]{data/linearity.dat};
+			\addlegendentry{m=5, n=20}
+			\addplot[thick, mark=diamond*, mark size = {2}, mark indices = {150}, red] table [x=k, y=10.20]{data/linearity.dat};
+			\addlegendentry{m=10, n=20}
+			\addplot[thick, mark=pentagon*, mark size = {2}, mark indices = {300}, cyan] table [x=k, y=10.30]{data/linearity.dat};
+			\addlegendentry{m=10, n=30}
+			\addplot[thick, mark=halfsquare*, mark size = {2}, mark indices = {400}, magenta] table [x=k, y=15.30]{data/linearity.dat};
+			\addlegendentry{m=15, n=30}
+		\end{axis}
+	\end{tikzpicture}
 \end{figure}
+%\begin{figure}
+%	\caption{Average MMR after $k$ questions with Pessimistic strategy for different problem sizes.}
+%
+%	%\Description{Graph showing that the MMR decreases very approximately linearly, and is convex, as a function of the number of questions.}
+%	\includegraphics[width=.45\textwidth]{linearity.png}
+%\end{figure}
 
 We next wonder how fast the regret decreases, measured as a function of the number of questions asked. This is important practically because it may be impossible or undesirable to ask sufficient questions to reach a low regret level. Knowing the speed of decrease permits to know which trade-offs can be achieved between the quality of the resulting recommendation and the number of questions that participants have to answer. \Cref{fig:linearity} shows graphically the decrease in MMR according to the number of questions asked for various problem sizes. We see that this function is convex, apart from the very first few questions, indicating %to users of our approach 
 that, on average, halving the number of questions will only reduce the gain in regret by less than half. \commentBN{Reviewer: Halving the number of questions reduces the regret by more than 50\%.}
