--- a/README.adoc
+++ b/README.adoc
@@ -5,31 +5,27 @@ Code at https://github.com/oliviercailloux/minimax.
 
 
 == TODO
-* Improve the code 
-* Read the proof of claim 4 (Bea & Paolo)
-* Rephrase the introduction (Paolo)
-* Find dataset in preflib (Bea)
-** Check if there is something applicable to our case: job applications
+* Experiments with https://www.preflib.org/data/election/agh/[courses preferences] and Pessimistic
 * Reduce the paper to 6+1 pages
-* +++<del>+++Figure 1, X axis label should say "Number of questions" (Bea)+++</del>+++
-** +++<del>+++Also, the labels are not consistent among figures+++</del>+++
+* Improve the code 
+* Rephrase the introduction (Paolo)
+** Add that asking questions to the committee in term of profile is new and must be stressed more. Also, this is compatible with every rule. If we ask about the weights it works only for scoring rules.
+* Read the proof of claim 4 (Bea & Paolo)
+* Find dataset in preflib (Bea)
+** https://www.preflib.org/data/election/agh/
+** https://www.preflib.org/data/election/poster/
+* Rephrase the experimental section writing the hypotesis first
 * Using \succeq^p_j(x) to denote the set of alternatives weakly worse than x can be confusing. Please consider using a different notation such as A^(\succeq^p_j,x). 
 ** https://en.wikipedia.org/wiki/Upper_set[see Upper Set]
+* Experiments to elicite the scoring rule when knowing the full profile
+** Plot of decresing regret
 
 
-== To discuss:
 
-* In several places you use the phrase "permits to" when it might be clearer to say "allows for". 
-** Those don't have the same meanings at all see https://dictionary.cambridge.org/dictionary/english/allow-for-sth[this]
-** Permit appears to be more formal than allow see https://dictionary.cambridge.org/grammar/british-grammar/allow-permit-or-let?q=Allow%2C+permit+or+let[this]
-
-
-=== Rules for resubmission:
-Authors of papers that have been rejected at any peer-reviewed conference within the past 6 months must declare the resubmission by including a cover letter with their submission. The cover letter should summarize the main reasons for rejection and should describe the changes the authors have made to address the reviewers’ comments. The cover letter should be inserted at the beginning of the submitted PDF, along with the previous reviews and previous anonymized rejected submission, before the 6+1 pages of the paper. Such resubmissions must contain, in a single PDF file:
-
-– the cover letter, starting with the title of the rejected paper, the tracking number (if any), and the name of the conference to which this paper was submitted,
-– the full reviews from the rejected conference,
-– the anonymized version of the rejected paper, and
+=== Resubmission:
+– the cover letter, (Bea)
+ starting with the title of the rejected paper, the tracking number (if any), and the name of the conference to which this paper was submitted, [of AAMAS]
+– the full reviews from the rejected conference, [both IJCAI and AAMAS]
+– the anonymized version of the rejected paper, and [last one]
 – the new submission.
 
-A paper rejected from a peer-reviewed conference within the past 6 months  will be rejected without further review if the authors do not declare the resubmission.
